--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,9 +1,134 @@
 ---
 ---
+@article{Sibilia2024,
+   abstract = {The escalating frequency of extreme climatic events and ongoing urbanisation expose European communities to increasing disaster risks, which are determined not only by the hazardous events themselves, but also by the exposure and vulnerability to these hazards. Consequently, effective risk management strategies cannot overlook a comprehensive understanding of the factors influencing vulnerability of the communities. This paper addresses this need by presenting a European-wide framework for the development of a Vulnerability Index (VI) that evaluates vulnerability at both national and subnational scales. Adopting a multi-dimensional and multi-level approach, the VI captures socio-economic, political, environmental, and physical factors contributing to community resilience. A standardised, supranational methodology is employed, providing harmonised cross-country information and time series data for vulnerability and its underlying indicators. This comprehensive assessment facilitates the understanding of socio-economic dynamics, enabling the formulation of targeted policy actions at both country and subnational levels. By offering insights into current vulnerability trends, the VI underlines the importance of governance, economic factors, and disaster preparedness in reducing vulnerability at different administrative levels, while highlighting the role of social factors, such as poverty and social exclusion, in community vulnerability at sub-regional levels.},
+   author = {Andrea Sibilia and Gustav Eklund and Sepehr Marzi and Igor Valli and Christos Bountzouklis and Samuel Roeslin and Davide Rodomonti and Sandro Salari and Tiberiu Eugen Antofie and Christina Corbane},
+   doi = {10.1016/j.ijdrr.2024.104885},
+   issn = {22124209},
+   journal = {International Journal of Disaster Risk Reduction},
+   keywords = {Composite indicator,Disaster risk reduction,Spatio-temporal patterns,Time series,Vulnerability},
+   month = {10},
+   publisher = {Elsevier Ltd},
+   title = {Developing a multi-level european-wide composite indicator to assess vulnerability dynamics across time and space},
+   volume = {113},
+   year = {2024}
+}
+
+@techReport{CORBANEChristina2024,
+   author = {CORBANE Christina and EKLUND Gustav and GYENES Zsuzsanna and LENTINI Azzurra and SAN-MIGUEL Jesus and DURRANT Tracy and BOCA Roberto and MAIANTI Pieralberto and LIBERTA' Giorgio and OOM Duarte and BRANCO Alfredo and DE RIGO Daniele and SUAREZ MORENO Maria and FERRARI Davide and ROGLIA Elena and SCIONTI Nicola and BROGLIA Marco and HRAST ESSENFELDER Arthur and TORETI Andrea and SALAMON Peter and D'ANGELO Claudia and DWORAK Thomas and BERGLUND Maria and SANTINI Marzia and PROIETTI Chiara and TSIONIS Georgios and WOOD Maureen and GUAGNINI Enrico and PLA FREIXA Patricia and MAGROTTI Giovanni and DE LA ROSA BLUL Juan Carlos and GUGLIELMELLI Antonio and KRAUSMANN Elisabeth and MENONI Scira and FAIELLA Anna and GAZZOLA Veronica and BONI Maria Pia and RUIZ MORENO Ana and COLPO Pascal and SPAGNOLO Luigi and REMBOLD Felix and BARUTH Bettina and VAN WIJK Lorenzo and KOUTELOS Konstantinos and VALSAMOS Georgios and JUNGWIRTH Rainer and ROBUCHON Marine and DUBOIS Gregoire and DI GIROLAMO Francesca and SCHVITZ Guy and GALARIOTIS Ioannis and LINGE Jens and KOTSEVA Bonka and KRZYSZTOFOWICZ Maciej and JENSEN Kathrine and MUENCH Stefan and ROESLIN Samuel and BOUNTZOUKLIS Christos and SIBILIA Andrea and RODOMONTI Davide and SALARI Sandro},
+   city = {Luxembourg},
+   doi = {10.2760/55638},
+   institution = {Publications Office of the European Union},
+   title = {Cross-border and emerging risks in Europe},
+   url = {https://publications.jrc.ec.europa.eu/repository/handle/JRC137818},
+   year = {2024}
+}
+
+@article{Roeslin2023,
+   abstract = {<p><![CDATA[Abstract. This paper presents a new framework for the seismic loss prediction of residential buildings in Ōtautahi / Christchurch, New Zealand. It employs data science techniques, geospatial tools, and machine learning (ML) trained on insurance claims data from the Earthquake Commission (EQC) collected following the 2010–2011 Canterbury earthquake sequence (CES). The seismic loss prediction obtained from the ML model is shown to outperform the output from existing risk analysis tools for New Zealand for each of the main earthquakes of the CES. In addition to the prediction capabilities, the ML model delivered useful insights into the most important features contributing to losses during the CES. ML correctly highlighted that liquefaction significantly influenced building losses for the 22 February 2011 earthquake. The results are consistent with observations, engineering knowledge, and previous studies, confirming the potential of data science and ML in the analysis of insurance claims data and the development of seismic loss prediction models using empirical loss data.]]></p>},
+   author = {Samuel Roeslin and Quincy Ma and Pavan Chigullapally and Joerg Wicker and Liam Wotherspoon},
+   doi = {10.5194/nhess-23-1207-2023},
+   issn = {1684-9981},
+   issue = {3},
+   journal = {Natural Hazards and Earth System Sciences},
+   month = {3},
+   pages = {1207-1226},
+   title = {Development of a seismic loss prediction model for residential buildings using machine learning – Ōtautahi / Christchurch, New Zealand},
+   volume = {23},
+   url = {https://nhess.copernicus.org/articles/23/1207/2023/},
+   year = {2023}
+}
+
+@phdthesis{Roeslin2021,
+   author = {Samuel Roeslin},
+   city = {Auckland, New Zealand},
+   school = {University of Auckland},
+   month = {9},
+   title = {Predicting Seismic Damage and Loss for Residential Buildings using Data Science},
+   url = {https://hdl.handle.net/2292/57074},
+   year = {2021}
+}
+
+@article{Teran-Gilmore2020a,
+   author = {Amador Terán-Gilmore and Samuel Roeslin and Edgar Tapia-Hernández and Edgar Cuadros-Hipólito},
+   doi = {10.1016/j.jobe.2020.102022},
+   issn = {23527102},
+   issue = {November},
+   journal = {Journal of Building Engineering},
+   month = {11},
+   pages = {102022},
+   title = {Displacement-based design of tall earthquake-resistant diagrid systems},
+   url = {https://linkinghub.elsevier.com/retrieve/pii/S2352710220336548},
+   year = {2020}
+}
+@inproceedings{Roeslin2020b,
+   author = {Samuel Roeslin and Quincy Ma and Pavan Chigullapally and Joerg Wicker and Liam Wotherspoon},
+   city = {Sendai, Japan},
+   booktitle = {Proceeding of the 17th World Conference on Earthquake Engineering, 17WCEE},
+   keywords = {Canterbury Earthquake Sequence (CES),Machine Learning,Seismic loss prediction},
+   title = {Feature Engineering for a Seismic Loss Prediction Model Using Machine Learning, Christchurch Experience},
+   year = {2020}
+}
 
 @article{Roeslin2020,
-  title={A machine learning damage prediction model for the 2017 Puebla-Morelos, Mexico, earthquake},
-  author={S. Roeslin and Q. Ma and H. Juárez-Garcia and A. Gómez-Bernal and J. Wicker and L. Wotherspoon},
-  journal={Earthquake Spectra},
-  year={2020}
+   abstract = {The 2017 Puebla, Mexico, earthquake event led to significant damage in many buildings in Mexico City. In the months following the earthquake, civil engineering students conducted detailed building assessments throughout the city. They collected building damage information and structural characteristics for 340 buildings in the Mexico City urban area, with an emphasis on the Roma and Condesa neighborhoods where they assessed 237 buildings. These neighborhoods are of particular interest due to the availability of seismic records captured by nearby recording stations, and preexisting information from when the neighborhoods were affected by the 1985 Michoacán earthquake. This article presents a case study on developing a damage prediction model using machine learning. It details a framework suitable for working with future post-earthquake observation data. Four algorithms able to perform classification tasks were trialed. Random forest, the best performing algorithm, achieves more than 65% prediction accuracy. The study of the feature importance for the random forest shows that the building location, seismic demand, and building height are the parameters that influence the model output the most.},
+   author = {Samuel Roeslin and Quincy Ma and Hugon Juárez-Garcia and Alonso Gómez-Bernal and Joerg Wicker and Liam Wotherspoon},
+   doi = {10.1177/8755293020936714},
+   issn = {8755-2930},
+   issue = {S2},
+   journal = {Earthquake Spectra},
+   month = {7},
+   note = {http://journals.sagepub.com/doi/10.1177/8755293020936714},
+   pages = {875529302093671},
+   title = {A machine learning damage prediction model for the 2017 Puebla-Morelos, Mexico, earthquake},
+   volume = {36},
+   year = {2020}
+}
+
+@article{Roeslin2020c,
+   abstract = {This report presents the observations and findings following the 2017 Puebla earthquake that occurred inMexico on September 19th, 2017. The reconnaissance mission was a collaboration between the New ZealandSociety of Earthquake Engineering (NZSEE), the Universidad Autónoma Metropolitana (UAM) Azcapotzalco,the American Concrete Institute (ACI) Disaster Reconnaissance team, and the Colegio de Ingenieros Civilesde Mexico (CICM). During the earthquake, 77 buildings suffered partial or total collapse and more than8,000 buildings experienced damage ranging from slight damage to significant structural damage necessitatingdemolition. As observed in previous earthquakes, the unique soil conditions of Mexico City resulted inextensive damage to the city’s infrastructure, primarily due to local site effects. The earthquake causedrelatively more damage to buildings built on transition and soft soil zones (i.e. between hard and deep softsoils) than those on hard soils.The NZSEE and UAM team focussed on areas with widespread and extensive damage. They also assessedthe performance of repaired and retrofitted buildings after the 1985 Michoacán earthquake. It was found thatthe lessons learnt from the 1985 Michoacán earthquake led to some risk mitigation measures which benefitedseveral buildings in the 2017 earthquake. Retrofitted buildings were found to have performed very well withlittle or no damage when compared to other buildings.},
+   author = {Samuel Roeslin and Hugón Juárez-Garcia and Kenneth Elwood and Rajesh Dhakal and Alonso Gómez-Bernal},
+   doi = {10.5459/bnzsee.53.3.150-172},
+   issn = {2324-1543},
+   issue = {3},
+   journal = {Bulletin of the New Zealand Society for Earthquake Engineering},
+   month = {9},
+   pages = {150-172},
+   title = {The September 19th, 2017 Puebla, Mexico earthquake},
+   volume = {53},
+   url = {https://www.bulletin.nzsee.org.nz/index.php/bnzsee/article/view/1468},
+   year = {2020}
+}
+
+@article{Roeslin2018c,
+   author = {Samuel Roeslin and Quincy T. M. Ma and Hugón Juárez García},
+   doi = {10.3389/fbuil.2018.00072},
+   issn = {2297-3362},
+   journal = {Frontiers in Built Environment},
+   keywords = {2017 Puebla earthquake,Building damage analysis,European Macroseismic Scale EMS-98,Global Earthquake Model (GEM),seismic assessment forms,seismic damage assessment},
+   month = {12},
+   pages = {18},
+   title = {Damage Assessment on Buildings Following the 19th September 2017 Puebla, Mexico Earthquake},
+   volume = {4},
+   url = {https://www.frontiersin.org/article/10.3389/fbuil.2018.00072/full},
+   year = {2018}
+}
+
+@inproceedings{Roeslin2018b,
+   author = {Samuel Roeslin and Kenneth J. Elwood and Hugon Juarez-Garcia and Alonso Gomez-Bernal and Rajesh P. Dhakal},
+   city = {Auckland, New Zealand},
+   booktitle = {Proceedings of the 2018 New Zealand Society for Earthquake Engineering (NZSEE) Conference},
+   title = {The September 19th, 2017 Puebla, Mexico Earthquake – Preliminary report},
+   year = {2018}
+}
+
+@inproceedings{Roeslin2018a,
+   abstract = {Past seismic events have shown that economic losses following an earthquake disaster could significantly exceed any previous loss expectation. Modern engineering design methodologies define the seismic risk based on life safety criteria but do not explicitly specify the essential criteria leading to economic losses. This research attempts to identify the preponderant parameters effecting financial losses due to building damage following an earthquake event. Existing pre-event data collection frameworks are reviewed. A new approach based on the Pareto principle is introduced. Financial and structural survey data from the Christchurch earthquakes are analyzed with the purpose of identifying the principal sources of economic losses in buildings. As a result of the desktop study, a new post-earthquake assessment form based on the GEM building taxonomy is proposed. Remarks following its application in Mexico City following the 2017 Puebla earthquake are presented. Introduction},
+   author = {Samuel Roeslin and Quincy T. Ma},
+   city = {Los Angeles, USA},
+   booktitle = {Proceedings of the 11th National Conference in Earthquake Engineering, Earthquake Engineering Research Institute (EERI)},
+   note = {<u>https://11ncee.org/images/program/papers/11NCEE-000550.pdf<br/><br/>https://researchspace.auckland.ac.nz/handle/2292/43110</u>},
+   title = {A New Approach for the Seismic Loss Estimation of Existing Buildings},
+   url = {https://11ncee.org/images/program/papers/11NCEE-000550.pdf},
+   year = {2018}
 }
